latex2mmlc/tests/snapshots/wiki_test__wiki185.snap
---
source: latex2mmlc/tests/wiki_test.rs
expression: x y z
---
<math>
    <mi>x</mi>
    <mi>y</mi>
    <mi>z</mi>
</math>
