latex2mmlc/tests/snapshots/wiki_test__wiki186.snap
---
source: latex2mmlc/tests/wiki_test.rs
expression: "\\text{x y z}"
---
<math>
    <mtext>x y z</mtext>
</math>
