latex2mmlc/tests/snapshots/wiki_test__wiki188.snap
---
source: latex2mmlc/tests/wiki_test.rs
expression: "\\text{if }n\\text{ is even}"
---
<math>
    <mtext>if </mtext>
    <mi>n</mi>
    <mtext> is even</mtext>
</math>
