latex2mmlc/tests/snapshots/wiki_test__wiki189.snap
---
source: latex2mmlc/tests/wiki_test.rs
expression: "\\text{if}~n\\ \\text{is even}"
---
<math>
    <mtext>if</mtext>
    <mtext> </mtext>
    <mi>n</mi>
    <mtext> </mtext>
    <mtext>is even</mtext>
</math>
